samples/_failures_safe/1761129258_df75d2_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_34d8fbc5.c: In function ‘main’:
./samples/SAFE/__tmp_34d8fbc5.c:140:17: error: expected declaration or statement at end of input
  140 |                 int found = 0;
      |                 ^~~
./samples/SAFE/__tmp_34d8fbc5.c:140:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_34d8fbc5.c:140:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_34d8fbc5.c:140:17: error: expected declaration or statement at end of input
